# datamapper

./: .pre-commit-config.yaml  Makefile  README.md  TODO.md  notes.md  pyproject.toml  requirements.txt
datamapper/: datamapper.py
datamapper/src/: error_manager.py  exceptions.py  field_cache.py  field_matcher.py  field_meta_data.py  logger_config.py  meta_field.py  path_manager.py  types.py
pydamapper/: __init__.py  pydamapper.py
pydamapper/_errors_handling/: messages.py  registry.py
pydamapper/src/: error_manager.py  exceptions.py  field_cache.py  field_matcher.py  logger_config.py  meta_field.py  path_manager.py  types.py  utils.py
pydamapper/src/error_handling/: exceptions.py  manager.py  registry.py  structures.py
pydamapper/tutorial/: dummy_data.py  models.py
pymapper/: __init__.py  pymapper.py
pymapper/src/: error_manager.py  exceptions.py  field_cache.py  field_matcher.py  field_meta_data.py  logger_config.py  path_manager.py  types.py  utils.py
tests/: conftest.py  expected.py  models.py  sources.py  test_datamapper.py  test_pymapper.py
