[project]
name = "datamapper"
version = "0.1.0"
description = "Map data between pydantic models"
authors = [
  { name = "Julio Cordero", email = "julioccorderoc@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
]

[tool.uv]
dev-dependencies = [
    "dotenv>=0.9.9",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]